[package]
name = "parsec-client-test"
version = "0.1.10"
authors = ["Paul Howard <paul.howard@arm.com>",
           "Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
edition = "2018"

[dependencies]
parsec-interface = { git = "https://github.com/parallaxsecond/parsec-interface-rs", tag = "0.4.0"  }
num = "0.2.0"
rand = "0.7.2"
log = "0.4.8"
derivative = "1.0.3"

[features]
default = ["testing"]
testing = ["parsec-interface/testing"]
